manifests/base/checkout/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice
  namespace: checkoutservice
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
      ports:
        - port: 5050
          protocol: TCP
  egress:
    - {}
